--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
                     dunia pengembangan web modern.
                   </p>
                   <div class="white-button">
-                    <a
-                      href="assets/file/cv-download.pdf"
-                      download="cv-BintangRF"
+                    <a href="assets/file/CV baru.pdf" download="cv-BintangRF"
                       >Download CV</a
                     >
                   </div>
