--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   </p>
                   <div class="white-button">
                     <a
-                      href="assets/file/CV Bintang Ramadhana.pdf"
+                      href="assets/file/CV Bintang Ramadhana Faturizky.pdf"
                       download="cv-BintangRF"
                       >Download CV</a
                     >
