--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                 <div class="right-text">
                   <h4>Bintang Ramadhana Faturizky</h4>
                   <p>
-                    Saya adalah mahasiswa aktif semester terakhir di Politeknik
-                    LP3I Cimahi, dengan minat yang kuat dalam pengembangan
+                    Saya memiliki minat yang kuat dalam pengembangan
                     Frontend. Mulai dari pemanfaatan JavaScript sederhana hingga
                     penggunaan ReactJS, saya senang menggali lebih dalam dalam
                     dunia pengembangan web modern.
